# mllminal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/productization/: acceptance-results.md  adaptive-execution.md  adaptive-workflow-suggestions.md  application-learning-profiles.md  connected-desktop.md  desktop-client.md  email-draft-adapter.md  excel-adapter.md  filesystem-adapter.md  local-vision.md  packaging.md  performance-baseline.md  provider-resolution.md  security-model.md  windows-observation.md  windows-packaging.md  windows-product-acceptance.md  workflow-compiler.md  workflow-demonstration.md  workflow-repair.md
docs/validation/: feature-depth-matrix.md  performance-baseline.md  security-findings.md  whole-system-audit.md  windows-acceptance-results.md
packaging/browser-bridge/: README.md
packaging/browser-extension/: README.md  background.js  content.js  manifest.json
packaging/windows/: MLLminal.iss  README.md  export-diagnostics.ps1  install.ps1  uninstall.ps1
scripts/windows/: run-product-acceptance.ps1
src/mllminal/: __init__.py  config.py  contracts.py  persistence.py  runtime_store.py  state_machine.py  tools.py
tests/integration/: test_adaptive_api.py  test_adaptive_suggestions_api.py  test_api.py  test_learning_api.py  test_privacy_api.py  test_runtime.py
tests/unit/: test_adaptive_execution.py  test_adaptive_suggestions.py  test_application_learning_profiles.py  test_auth.py  test_cli_adaptive.py  test_cli_adaptive_suggestions.py  test_cli_learning.py  test_cli_learning_governance.py  test_cli_models.py  (+44 more)
(+145 files in other folders)
