[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mllminal"
version = "0.1.0"
description = "Local-first, terminal-first AI execution environment powered by Mil"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "platformdirs>=4.3,<5",
  "portalocker>=3.2,<4",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0,<3",
  "textual>=5.3,<6",
  "typer>=0.16,<1",
  "uuid6>=2025.0.1",
  "uvicorn[standard]>=0.35,<1",
  "websockets>=15,<16",
]

[project.scripts]
mllminal = "mllminal.cli.main:app"
mllminald = "mllminal.daemon.main:main"

[dependency-groups]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mllminal"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mllminal"]

